# unshorten-fast

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: documentation.md
unshorten_fast/: api.py
