[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unshorten-fast"
version = "0.0.1"
authors = [
    { name="Giovanni Luca Ciampaglia", email="gciampag@umd.edu" },
]
description = "Expands URLs from shortening services fast"
readme = "README.md"
requires-python = ">= 3.7"
dependencies = [
    "aiohttp[speedups]",
    "redis"
]

[project.scripts]
unshorten = "unshorten_fast.api:main"

[project.urls]
"Homepage" = "https://github.com/glciampaglia/unshorten-fast"
"Bug Tracker" = "https://github.com/glciampaglia/unshorten-fast/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
unshorten_fast = ['shorturl-services-list.csv']
